public/css/mystyle.css
body {
  background: black;
  position: relative;
}






#hometb {
  display: none;
  color:white;
  width:100%;
  position: absolute;
/*  left: 50%;
  margin-left: -100px;*/
  top:300px;
  text-align: center;
}

#teamtb {
  display: none;
  color:white;
  width:50%;
  position: absolute;
  left: 16%;
  margin-left: 0px;
  top:115em;
}

#abouttb {
  display: none;
  color:white;
  width:50%;
  position: absolute;
  left: 16%;
  margin-left: 0px;
  top:60em;
}

.head p{
  font-size: 20px;
}

#draw {
  display: none;
  background: none;
  //width: 100%;
  //height:100%;
  float: left;
  position: absolute;
  top:0px;
  left: 0%;
}

#map {
  //display: none;
  background: none;
  width: 100%;
  height:100%;
  //float: left;
  position: absolute;
  top:0px;
  left: 0%;
}



#tablepath {
  display: none;
  position: relative;
  float: left;        
  width: 130px;
  height: 100%;
  background-color: rgba(30,30,30,0.9);
  color:none;
  left: 300px;
  margin-left: 0px;
  bottom:-175px;
}

#nowpath_title {
  color:rgb(80,80,80);
  position: absolute;
  left:300px;
  width: 175px;
  cursor: pointer;
  height:40px;
  bottom: 10px;

}

#nowpath_title p{
  font-size: 34px;
  margin-top: -10px;
}

#control {
  display: none;
  position:relative;
  background-color: rgba(20,20,20,0.9);
  width:300px;
  //height:960px;
  left: calc(100% - 400px);
  top:120px;
  margin-left: 15px;
  
}


#menu {
  top:0px;
  color:#777888;

  display: block;
  background-color: rgba(100,100,100,0.2);
  width:100%;
  height:30px;
  left:0%;
  top:0%;
  position:fixed;
  font-family: roboto;
  padding-top: 10px;
  padding-left: 30px;
}

#menu p {
  position: absolute;
  left: 60px;
  top:-5px;
  padding-bottom: 0px;
  font-size: 20px;
}

#menu:hover {
  //cursor: pointer;
  color: white;
  //background-color: #010214;
}

.mynav {
  top:80px;
  position: absolute;
  font-size: 17px;
}


.mynav div {
  margin-bottom: 10px;
}

.mynav div:hover {
  cursor: pointer;
  opacity: 0.7;
}

#navigator {
  display: block;
  background-color: rgba(100,100,100,0.2);
  width:100%;
  height:50px;
  left:0%;
  top:0px;
  margin-left: 5px;
  position:absolute;
}

#pre {
  //display: none;
  height:960px;
  //left:430px;
  top:0px;
  margin-left: 0px;
  position:absolute;
}

#preview {
  background-color: rgba(30,30,30,0.9);
  position: absolute;
  left: 0px;
  width:100%;
  height:155px;
  border-style: solid;
  border-color: #a1a1a1;
  border-width:1px;
}

.mysvg {
  position: absolute;
  top:0px;
  left: 0px;

}

.svgpage {
  position: absolute;
  top:0px;
  left: 0px;

}

.mycanvas  {
  //display: none;
  position: absolute;
  //transform: translate(150px,500px);

}

.globe  {
  //display: none;
  position: absolute;
  //transform: translate(150px,500px);

}



.route {
  fill: none;
  stroke: white;
  stroke-width: 1.5px;
  opacity:0.5;
}

.curroute_blur{
  fill: none;
  stroke: #fff4bd;
  stroke-width: 1.5px;
  opacity:1;
  filter:url(#blur-effect-1);
}

.pastroute_blur{
  fill: none;
  stroke: #fff4bd;
  stroke-width: 1.5px;
  opacity:1;
  filter:url(#blur-effect-1);
}

.route_map_blur {
filter:url(#blur-effect-2);
}

.pastRoute_map_blur {
filter:url(#blur-effect-2);

}

.curroute{
  fill: none;
  stroke: #fff4bd;
  stroke-width: 1.5px;
  opacity:1;
}

.pastroute{
  fill: none;
  stroke: #fff4bd;
  stroke-width: 1.5px;
  opacity:1;
}


#tablepath p {
  color:#a1a1a1;
  left:10px;
}
#tablepath div {
  height:22px;
  background-color: rgba(20,20,20,0.9);
  color:#a1a1a1;
}

#tablepath div:hover {
  background-color: rgba(50,50,50,0.9);
  cursor: pointer;
  color:white;
}

#tablepath div.active {
  background-color: rgba(200,200,200,1);
  cursor: pointer;
}



h1,h2,h3,h4,h5,h6 {
  font-family: roboto;
}

p {
  margin-top:5px ;
  margin-bottom:1px;
  font-family: roboto;
  font-size: 12px;
  padding:9px;
}


.thepaths:hover{
  color: rgba(200,200,200,1);
  cursor: pointer;
}


.xaxis g{
  fill:rgb(100,100,100);
  font: 10px sans-serif;

}

.xaxis path{
  fill:rgb(100,100,100);
  font: 10px sans-serif;
  stroke: white;
  stroke-width: 1.5px;

}

.points circle {
 fill: rgba(255,255,255,0.5);
 stroke: none;
 stroke-width: 2px;
}

.points text {
  font: 7px sans-serif;
  //text-anchor: middle;
  fill:white;
  opacity:0.6;
  padding-bottom: -5px;
  //text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
}



#next {
  position: absolute;
  background-color: rgba(20,20,20,0.8);
  width:50%;
  left: 50%;
  bottom: 0px;
  border-left:1px solid rgb(50,50,50);
  border-top:1px solid rgb(50,50,50);
}

#next p {
  padding-left: 35px;
  padding-bottom: 10px;
  color:white;
}

#stop {
  position: absolute;
  background-color: rgba(20,20,20,0.8);
  width:50%;
  left: 0%;
  bottom: 0px;
  border-top:1px solid rgb(50,50,50);
}

#stop p {
  padding-left: 52px;
  padding-bottom: 10px;
  color:white;
}

#story {
  position: absolute;
  top:380px;
  color:white;
  left: 30px;
  width:240px;

}

#story p {
  padding: 5px;
  width:230px;
  word-wrap:break-word;
}

#title {
  position: absolute;
  top:10px;
  color:white;
  left: 90px;
}

#title p{
  font-size: 17px;
  width:180px;
  word-wrap:break-word;
  padding-left: 0px;
}

#number {
  position: absolute;
  top:10px;
  color:white;
  left: 38px;
}

#number p{
  font-size: 35px;
  width:180px;
  word-wrap:break-word;
  padding-left: 0px;
}

#Coord {
  position: absolute;
  top:55px;
  color:rgb(150,150,150);
  left: 30px;
  font-family: roboto;
  font-size: 7px;
  width:240px;
  word-wrap:break-word;
  text-align: left
}

#Coord p {
  font-size: 8.5px;
}

#Coordnum {
  position: absolute;
  top:55px;
  color:rgb(150,150,150);
  left: 80px;
  font-family: roboto;
  font-size: 7px;
  width:240px;
  word-wrap:break-word;
  text-align: left
}

#Coordnum p {
  font-size: 8.5px;
}

#location {
  position: absolute;
  top:50px;
  color:rgb(150,150,150);
  left: 90px;
  font-family: roboto;
  font-size: 12px;
  width:240px;
  word-wrap:break-word;
  text-align: left

}

#location p{
}

#media {
  position: absolute;
  top:110px;
  left: 30px;
  width:240px;
  height:240px;
  overflow:hidden;
  border: none;
}

#media img{
  min-width:240px;
  max-height:240px;
  border: none;
  border-color: none;
}

#media iframe{
  border: none;
  min-width:240px;
  max-height:240px;

}

#overlap1 {
  position: absolute;
  top:110px;
  left: 30px;
  width:30px;
  height:240px;
  border: none;
}

#overlap1 path {
  stroke:#d9d9d9;
  stroke-width:5;
  fill:none;
}
#overlap1 path:hover {
  stroke:#a1a1a1;
  cursor: pointer;
}

#overlap2 {
  position: absolute;
  top:110px;
  left: 240px;
  width:30px;
  height:240px;
  border: none;
}

#overlap2 path {
  stroke:#d9d9d9;
  stroke-width:5;
  fill:none;
}

#overlap2 path:hover {
  stroke:#a1a1a1;
  cursor: pointer;
}

#next:hover {
  background-color: rgba(200,200,200,0.2);
  cursor: pointer;
}

#stop:hover {
  background-color: rgba(200,200,200,0.2);
  cursor: pointer;
}

.timeid circle:hover {
  fill: rgba(206, 18, 18, 0.8);
  r:3;
  cursor: pointer;
}

.mypoints circle:hover {
  fill: rgba(206, 18, 18, 0.8);
  r:3;
  cursor: pointer;
}

.timemark {
    y:15;
    x:-1.5;
    width:3px;
    height:15px;
    fill:#39a4e8;
}

.domain {
  font-size: 2px;


}

